--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -1,16 +1,13 @@
-{% extends "base.html" %}
-{% block content %}
-    <h2>Lessons</h2>
-    <ul>
+{% extends "base.html" %} {% block content %}
+<h2>Lessons</h2>
+<ul>
     {% for lesson in lessons %}
-        <li>
-            {{ lesson.title }} ({{ lesson.points }} points)
-            {% if lesson.id|string in user.completed_lessons.split(',') %}
-                - Completed
-            {% else %}
-                <a href="{{ url_for('quiz', lesson_id=lesson.id) }}">Take Lesson</a>
-            {% endif %}
-        </li>
+    <li>
+        {{ lesson.title }} ({{ lesson.points }} points) {% if lesson.id|string
+        in user.completed_lessons.split(',') %} - Completed {% else %}
+        <a href="{{ url_for('chapter', chapter_id=lesson.id) }}">Chapter</a>
+        {% endif %}
+    </li>
     {% endfor %}
-    </ul>
+</ul>
 {% endblock %}
