--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -31,7 +31,7 @@
                 <input
                     type="radio"
                     name="{{ q.id }}"
-                    value="{{ option }}"
+                    value="{{ loop.index0 }}"
                     id="{{ q.id }}_{{ loop.index }}"
                     required
                 />
