--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -17,7 +17,7 @@
     "
 >
     <form
-        action="{{ url_for('quiz', lesson_id=quiz_id) }}"
+        action="{{ url_for('quiz', quiz_id=quiz_id) }}"
         method="post"
         style="all: initial"
     >
