--- a/templates/base.html
+++ b/templates/base.html
@@ -2,21 +2,25 @@
 <html>
 <head>
     <title>Learning Platform</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='markdown.css') }}"
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <nav>
-        {% if session.user_id %}
-            <span>Points: {{ user.points }}</span>
-            <a href="{{ url_for('profile') }}">Profile</a>
-            <a href="{{ url_for('logout') }}">Logout</a>
-        {% endif %}
-    </nav>
+    
+    
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for message in messages %}
-                <div class="flash">{{ message }}</div>
+                {% if message =='Invalid credentials!' %}
+                    <div class="flash">
+                    {{ message }}</div>
+                    
+                {%else%}
+                    <div class="flash1">
+                    {{ message }}</div>
+                {% endif %}
             {% endfor %}
         {% endif %}
     {% endwith %}
