--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,7 @@
                             type="text"
                             id="username"
                             name="username"
-                            class="input input-bordered w-full mt-1"
+                            class="input input-bordered w-full mt-1 border-solid border-2 pl-1"
                             required
                         />
                     </div>
@@ -56,7 +56,7 @@
                             type="password"
                             id="password"
                             name="password"
-                            class="input input-bordered w-full mt-1"
+                            class="input input-bordered w-full mt-1 border-solid border-2 pl-1"
                             required
                         />
                     </div>
@@ -66,7 +66,7 @@
                         <label class="flex items-center">
                             <input
                                 type="checkbox"
-                                class="checkbox checkbox-sm mr-2"
+                                class="checkbox checkbox-sm mr-2 border-solid border-2"
                             />
                             <span class="text-sm text-gray-600"
                                 >Remember me</span
