--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -3,6 +3,20 @@
 <h2>Points: {{ points }}</h2>
 <h2>Time Limit: {{ time_limit }} minutes</h2>
 
+{% with messages = get_flashed_messages(with_categories=true) %}
+{% if messages %}
+    {% for category,message in messages %}
+            <div role="alert" class="alert alert-{{ category }} max-w-md mx-auto z-20 mt-5 flex ">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                <span>{{ message }}</span>
+            </div>
+    
+    {% endfor %}
+{% endif %}
+{% endwith %}
+
 <div
     style="
         width: 50%;
@@ -21,6 +35,7 @@
         method="post"
         style="all: initial"
     >
+
         {% for q in questions %}
         <div style="padding: 1rem">
             <h3>Question {{ loop.index }}: {{ q.text }}</h3>
