--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         />
     </head>
     <body>
-        <div class="navbar bg-base-100 shadow-sm">
+        <div class="navbar bg-base-100 shadow-sm sticky top-0 z-50">
             <div class="flex-1">
                 <a class="text-xl" href="/">Welcome</a>
             </div>
