--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,25 @@
-{% extends "base.html" %} {% block content %}
-<div
-    class="hero min-h-screen"
-    style="
-        background-image: url(https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-    "
->
-    <div class="min-h-screen w-full bg-black/50 backdrop-blur-sm">
+{% extends "base.html" %}
+{% block content %}
+
+<div class="bg-[url(https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);] bg-cover bg-center bg-fixed h-screen w-full">
+<div class="min-h-screen w-full bg-black/50 backdrop-blur-sm">
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+{% if messages %}
+    {% for category,message in messages %}
+            <div role="alert" class="alert alert-{{ category }} max-w-md mx-auto z-20 mt-5">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                <span>{{ message }}</span>
+            </div>
+    
+    {% endfor %}
+{% endif %}
+{% endwith %}
+
+<div>
+    
         <div class="min-h-screen flex items-center justify-center">
             <div class="card w-full max-w-md bg-white shadow-lg rounded-lg p-8">
                 <!-- Logo -->
@@ -115,5 +129,8 @@
             </div>
         </div>
     </div>
+    </div>
 </div>
+
+
 {% endblock %}
